Fixed text overflow issue
Using vh on ".container" was causing text overflow issues upon scaling. Fixed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,6 @@ body {
 
 .container {
     max-width: 100%;
-    height: 100vh;
     padding: 20px;
     margin: 0 auto;
     display: grid;
